tests/transpiler/x/java/if_then_else.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 14:23:53 UTC
public class Main {
    public static void main(String[] args) {
        var x = 12;
        var msg = x > 10 ? "yes" : "no";
        System.out.println(msg);
    }
}
